# Modelling

./: .gitignore  CMakeLists.txt  README.md
doc/: Specific Task.md  documentation.md  hierarchy_of_backend.canvas  hierarchy_of_backend.md  interfacedoc.md  specifictask.md  user_interface_doc.md  Иерархия backend.canvas
src/app/: CMakeLists.txt  app.cpp  app.hpp  buyform.cpp  buyform.hpp  buyform.ui  depositform.cpp  depositform.hpp  depositform.ui  gamewindow.cpp  gamewindow.hpp  gamewindow.ui  iterateform.cpp  iterateform.hpp  iterateform.ui  main.cpp  sellform.cpp  sellform.hpp  sellform.ui  setupform.cpp  setupform.hpp  setupform.ui
src/logic/: CMakeLists.txt  asset.cpp  asset.hpp  bond.cpp  bond.hpp  currency.cpp  currency.hpp  depositor.cpp  depositor.hpp  depositors.cpp  depositors.hpp  fund.cpp  fund.hpp  market.cpp  market.hpp  stock.cpp  stock.hpp  system.cpp  system.hpp  unique_bond.cpp  unique_bond.hpp
